<package>
	<name>ar_pose</name>
	<version>0.0.0</version>
	<description>
		Augmented Reality Marker Pose Estimation using ARToolkit
	</description>

	<author>Ivan Dryanovski, William Morris, Gautier Dumonteil et al.</author>
	<maintainer email="max.schwarz@online.de">Max Schwarz</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>artoolkit</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>resource_retriever</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>
</package>
