<package>
	<name>artoolkit</name>
	<version>0.0.0</version>
	<description>
		Artoolkit Library
	</description>

	<author>Gautier Dumonteil</author>
        <maintainer email="bill@neautomation.com">Bill Morris</maintainer>
	<maintainer email="max.schwarz@online.de">Max Schwarz</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>glut</build_depend>
	<build_depend>libv4l-dev</build_depend>
</package>
